fixed position of links in the desktop version

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -106,5 +106,11 @@ img{
                 width: 45vw;
             }
         }
+
+        .links{
+            display: flex;
+            justify-content: flex-end;
+            padding-right: 5vw;
+        }
     }
 }
