--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -86,7 +86,7 @@ img{
 @media(min-width: 700px){
     body{
         height: 100vh;
-        background: url(/images/bg-desktop.svg) no-repeat;
+        background: url(/images/bg-desktop.svg) no-repeat cover;
         background-color: $Violet;
     }
 
